--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 }
 
 #game {
-  margin: 2vw 2vw;
   box-sizing: border-box;
+
+  margin: 2vw 2vw;
   max-width: 100vw;
 }
 
@@ -64,11 +65,13 @@ input {
 }
 
 #canvas {
+  box-sizing: border-box;
   display: flex;
-  padding: 2vh 0;
+  padding: 2vh 2vh;
   justify-content: center;
   align-items: center;
-  max-width: 90vw;
+  max-width: 100vw;
+  margin: auto;
 }
 
 
@@ -90,7 +93,6 @@ input {
   visibility: visible;
   opacity: 1;
   transition-delay: 0s;
-
 }
 
 .modal-bg {
