--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
 
 footer {
   text-align: center;
+  margin: 20px 0;
 }
 
 .welcome {
@@ -57,6 +58,15 @@ input {
   max-width: 200px;
   min-width: 50px;
 }
+
+.sr-only {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  }
 
 #album-guess-btn {
   width: 80%;
@@ -106,7 +116,21 @@ input {
   background: #fff;
   position: relative;
   padding: 30px;
+  margin: 15px;
+  width: 90vw;
 }
+
+h2 {
+  padding: .5rem 0 1rem 0;
+}
+
+
+@media (min-width: 480px) {
+  .modal-container {
+    width: 50vw;
+  }
+}
+
 .modal-close {
   position: absolute;
   right: 15px;
