--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+
 }
 
 #game {
   box-sizing: border-box;
-
   margin: 2vw 2vw;
   max-width: 100vw;
 }
@@ -26,6 +27,7 @@ header {
 footer {
   text-align: center;
   margin: 20px 0;
+  padding: 3px;
 }
 
 .welcome {
@@ -58,10 +60,17 @@ form {
   justify-content: center;
 }
 
+#generate-image-form {
+  margin: 25px 0;
+  display: flex;
+  flex-direction: column;
+}
+
 input {
-  width: 80%;
+  width: 100%;
   max-width: 72vw;
   min-width: 30px;
+  padding: 3px;
 }
 
 .sr-only {
