--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ footer {
   /* flex-flow: row wrap; */
   align-items: center;
   justify-content: center;
-  padding: 10px 0;
+  padding: 10px 8px;
   margin: 50px 0 0 0;
 }
 
@@ -67,7 +67,6 @@ form {
 
 input {
   width: 100%;
-  max-width: 72vw;
   min-width: 30px;
   padding: 3px;
 }
@@ -93,6 +92,7 @@ input {
   padding: 2vh 2vh;
   justify-content: center;
   align-items: center;
+  width: 100%;
   max-width: 100vw;
   margin: auto;
 }
@@ -133,7 +133,11 @@ input {
   width: 90vw;
 }
 
-#dialogue {
+#modal-container-win {
+  text-align: center;
+}
+
+#dialog {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -169,5 +173,5 @@ h2 {
 }
 
 button {
-  padding: 1px;
+  padding: 3px;
 }
