--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ footer {
   margin: 50px 0 0 0;
 }
 
+#dialog-failure{
+  text-align: center;
+}
+
 form {
   box-sizing: border-box;
   display: flex;
