--- a/style.css
+++ b/style.css
@@ -101,6 +101,12 @@ input {
   margin: auto;
 }
 
+@media (min-width: 480px) {
+  #canvas {
+    width: 80%;
+  }
+}
+
 
 .modal {
   position: fixed;
