--- a/style.css
+++ b/style.css
@@ -183,6 +183,8 @@ input {
   visibility: visible;
   opacity: 1;
   transition-delay: 0s;
+  overflow-y: auto;
+  max-height: 80%;
 }
 
 .modal-bg {
