--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header {
   justify-content: center;
   align-items: center;
   padding: 0;
+  margin-top: 1vh;
 }
 
 /* //////// headers /////////// */
